--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,10 @@ button:focus {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
   max-width: var(--max-app-width);
   width: 100%;
+  z-index: 1000;
+}
+
+.z-index-top{
   z-index: 1;
 }
 
@@ -247,6 +251,23 @@ button:focus {
   display: flex;
   flex-direction: column ;
   
+}
+
+.list-view-header-backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
+  z-index: 1000;
+}
+
+.list-view-close {
+  position: fixed;
+  top: 0;
+  margin: 20px;
+  z-index: 1000;
 }
 
 .list-view-component-container {
@@ -407,8 +428,10 @@ button:focus {
 
 .footer-copy-container {
   justify-content: center;
+  text-justify: center;
   text-align: center;
   padding-bottom: 10px;
+  font-size: var(--font-smaller);
 }
 
 /* INDICATORS CSS */
@@ -672,19 +695,6 @@ button:focus {
   animation: pulse 0.6s ease-in-out;
 }
 
-.fade-out {
-  animation: fadeOut 0.5s forwards; /* Adjust time as needed */
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
 .empty-basket-copy {
   margin: auto;
   padding-top: 20px;
@@ -692,9 +702,12 @@ button:focus {
   text-align: center;
 }
 
-@keyframes fadeOut {
+@keyframes removeFromBasket {
   from {
     opacity: 1;
+  }
+  80% {
+    opacity: 0;
   }
   to {
     opacity: 0;
@@ -702,72 +715,83 @@ button:focus {
   }
 }
 
-.animate-out {
-  animation: fadeOut 0.5s forwards; /* Adjust the duration as needed */
+.remove-from-basket-animation {
+  animation: removeFromBasket 0.5s ease-in-out forwards; /* Adjust the duration as needed */
 }
 
+/* --------- Basket ---------- */
 
-
-/* Basket overlay background */
 .basket-overlay {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%; /* Adjust height as needed */
+  background: white;
+  box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.2);
+  transform: translateY(100%); /* Start off-screen */
+  transition: transform 0.4s ease-in-out;
+  z-index: 100;
+}
+
+/* Show basket */
+.basket-overlay.visible {
+  transform: translateY(0); /* Slide into view */
+}
+
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Shadow effect */
-  z-index: 1000; /* Ensure it appears above other elements */
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  transition: opacity 0.3s ease-in-out;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  opacity: 0; /* Initially hidden */
+  visibility: hidden; /* Initially hidden */
+  transition: opacity 0.4s ease, visibility 0.4s ease; /* Add transition */
+  z-index: 10;
 }
 
-/* Basket container with sliding animation */
+.backdrop.visible {
+  opacity: 1; /* Fully visible */
+  visibility: visible; /* Fully visible */
+}
+
+.backdrop.hidden {
+  opacity: 0; /* Fully hidden */
+  visibility: hidden; /* Fully hidden */
+  animation: removeFromBasket 0.5s ease-in-out forwards; /* Adjust the duration as needed */
+}
+
+
 .basket-container {
-  position: relative;
+  position: fixed;
+  border-radius: 20px 20px 0 0;
+  bottom: 0;
+  left: 0;
   width: 100%;
-  max-width: 600px; /* Optional: Set max width for larger screens */
-  height: calc(100% - 40px); /* Leave 40px space from the top */
+  height: 90%; /* Adjust as needed */
   background: var(--background);
-  border-radius: 16px 16px 0 0; /* Rounded corners on top */
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2); /* Box shadow */
-  transform: translateY(100%); /* Start off-screen */
-  overflow-y: auto; /* Enable scrolling if content overflows */
+  box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.2);
+  transform: translateY(100%); /* Start hidden off-screen */
+  transition: transform 0.4s ease-in-out; /* Smooth slide-in/out */
+  z-index: 110;
+  overflow: hidden;
+  overflow-y: auto; /* Enable vertical scrolling */
 }
 
-/* Slide-up animation */
-@keyframes slide-up {
-  from {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
+.basket-container.slide-in {
+  transform: translateY(0); /* Slide into view */
 }
 
-/* Slide-down (out) animation */
-@keyframes slide-down {
-  from {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  to {
-    transform: translateY(100%);
-    opacity: 0;
-  }
+.basket-container.slide-out {
+  transform: translateY(100%); /* Slide out of view */
 }
 
-/* Animation Classes */
-.animate-in .basket-container {
-  animation: slide-up 0.4s ease forwards;
-}
 
-.animate-out .basket-container {
-  animation: slide-down 0.4s ease forwards;
-}
+
+
+
 
 /* Add padding for top content */
 .top-padding-70 {
@@ -898,18 +922,6 @@ button:focus {
 
 .fade-out {
   animation: fadeOut 0.5s ease-in-out forwards; /* Adjust time as needed */
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  90% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
 }
 
 .footer-section {
@@ -1219,3 +1231,6 @@ button.swiper-pagination-bullet {
 
 
 
+.sticky{ 
+  position: sticky;
+}
